preliminary results for spiking MLP on binary data

--- a/train_frames_bin_lin.ipynb
+++ b/train_frames_bin_lin.ipynb
@@ -382,6 +382,22 @@
     "    print(f'({np.sum(train_labels[tr_mask] == 0)/ntot:.2f}:{np.sum(train_labels[tr_mask] == 1)/ntot:.2f})', end=', ')\n",
     "print('\\n')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average accuracies:\n",
+    "- Lin: 97.61% test 98.75% train\n",
+    "- FNN: 97.51% test 99.52% train\n",
+    "- CNN: 97.09% test 99.67% train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
