prepare network for loihi

--- a/loihi_preparation.ipynb
+++ b/loihi_preparation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stevenabreu/miniconda3/envs/dvsflow/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import h5py\n",
     "import numpy as np\n",
@@ -15,7 +24,9 @@
     "import lava.lib.dl.slayer as slayer\n",
     "from lava.lib.dl import netx\n",
     "\n",
-    "from cytometrybin import BinCytometryDataset, BinCytometryNetwork"
+    "# from tmp.cytometrybin import BinCytometryDataset, BinCytometryNetwork\n",
+    "from bcnetwork import BinCytometryNetwork\n",
+    "from bcdataset import BinCytometryDataset"
    ]
   },
   {
@@ -28,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder = '../data/bin_1ms_comp_ds'\n",
-    "trained_folder = 'logs/trained_fold4_nodelay_mar1'\n",
-    "delay = False\n",
+    "trained_folder = 'logs/mar9_512d_dt10us/fold1'\n",
+    "delay = True\n",
     "checkpoint_idx = 49\n",
     "checkpoint_name = f'net_{checkpoint_idx}.pt'\n",
     "net_filename = os.path.join(trained_folder, 'netx', f'net_{checkpoint_idx}.net')\n",
@@ -43,7 +54,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no test_fi given...\n",
+      "inp.shape torch.Size([128, 1536, 100]) ratio of classes: tensor(0.5000)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([512])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net_slayer = BinCytometryNetwork(layers='512d').to(device)\n",
+    "ds = BinCytometryDataset(data_folder=data_folder, timestep_us=10)\n",
+    "dl = DataLoader(ds, batch_size=128, shuffle=True, num_workers=0)\n",
+    "for i, (inp, lab) in enumerate(dl):\n",
+    "    print('inp.shape', inp.shape, 'ratio of classes:', lab.sum()/lab.shape[0])\n",
+    "    net_slayer.eval()\n",
+    "    with torch.no_grad():\n",
+    "        spikes, counts = net_slayer(inp.to(device))\n",
+    "    break\n",
+    "net_slayer.blocks[0].delay.delay.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +100,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "net_slayer = BinCytometryNetwork(delay=delay).to(device)\n",
     "checkpoint = torch.load(os.path.join(trained_folder, 'checkpoints', checkpoint_name))\n",
+    "print(checkpoint['blocks.0.delay.delay'].int().unique())\n",
     "net_slayer.load_state_dict(checkpoint)"
    ]
   },
@@ -73,24 +121,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no test_fi given...\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds = BinCytometryDataset(data_folder=data_folder)\n",
-    "dl = DataLoader(ds, batch_size=128, shuffle=True, num_workers=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -98,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inp.shape torch.Size([128, 1536, 1000]) ratio of classes: tensor(0.4922)\n"
+      "inp.shape torch.Size([128, 1536, 1000]) ratio of classes: tensor(0.4531)\n"
      ]
     }
    ],
@@ -113,18 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([128, 2, 1000]) torch.Size([3]) torch.Size([128])\n",
+      "torch.Size([128, 2, 1000]) torch.Size([2]) torch.Size([128])\n",
       "output spike rates:\n",
-      "tensor([[0.0200, 0.0410, 0.0510, 0.0310, 0.0480],\n",
-      "        [0.1170, 0.1570, 0.1690, 0.1530, 0.1510]])\n",
-      "accuracy: 0.984375\n"
+      "tensor([[0.1990, 0.2370, 0.2580, 0.0430, 0.1950],\n",
+      "        [0.0600, 0.0730, 0.0300, 0.1350, 0.0260]])\n",
+      "accuracy: 0.9921875\n"
      ]
     }
    ],
@@ -147,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# now that we've confirmed the network is working, let's save it to a file\n",
-    "net_slayer.export_hdf5('logs/working_network.net')"
+    "net_slayer.export_hdf5('working_network_512d.net')"
    ]
   },
   {
